--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,55 @@
     <string name="best_price">Best Price</string>
     <string name="most_booked">Most Booked</string>
     <string name="select_date">Select Date</string>
-
+    <string name="complete_booking">Complete Booking</string>
+    <string name="personal_information">personal Information</string>
+    <string name="name">Name</string>
+    <string name="john_doe">John Doe</string>
+    <string name="phone_number">Phone number</string>
+    <string name="seats">Seats</string>
+    <string name="payment_method">Payment method</string>
+    <string name="po_name">PO Name</string>
+    <string name="schedule">Schedule</string>
+    <string name="location">Location</string>
+    <string name="bus_no">Bus no.</string>
+    <string name="estimated_time">Estimated time</string>
+    <string name="seat_no">Seat no.</string>
+    <string name="tickets">Tickets</string>
+    <string name="unique_code">Unique Code</string>
+    <string name="total">Total</string>
+    <string name="continue_to_payment">Continue To Payment</string>
+    <string name="payment">Payment</string>
+    <string name="total_payment">Total payment</string>
+    <string name="payment_description">please select one of the payment method below</string>
+    <string name="credit_card">Credit card</string>
+    <string name="bank_transfer">Bank transfer</string>
+    <string name="retail_payment">Retail payment</string>
+    <string name="bni_mobile_banking">BNI Mobile banking</string>
+    <string name="cimb_mobile_banking">CIMB Niaga Mobile banking</string>
+    <string name="alfamart">Alfamart</string>
+    <string name="card_number">Card number</string>
+    <string name="card_number_hint">**** **** **** ****</string>
+    <string name="valid_until">Valid until</string>
+    <string name="month">Month</string>
+    <string name="year">year</string>
+    <string name="card_holder">Card holder</string>
+    <string name="surename">Surename</string>
+    <string name="vcc">VCC</string>
+    <string name="last_3_digits_desc">Last three digit on your card</string>
+    <string name="verifiy_payment">Verify payment</string>
+    <string name="bank_tutorial_no_1">1. Select transfer</string>
+    <string name="bank_tutorial_no_2">2. In sub menu select virtual account transfer</string>
+    <string name="bank_tutorial_no_3">3. Type this number in the field</string>
+    <string name="bank_tutorial_no_4">4. After you press continue, input this number to the transfer amount field.</string>
+    <string name="bank_tutorial_no_5">5. Dont forget to keep the receipt for verification process</string>
+    <string name="fake_price">100.000,00</string>
+    <string name="retail_tutorial_no_1">1. Ask the cashier for Online payment</string>
+    <string name="retail_tutorial_no_2">2. When you asked what Payment, answer Bux.</string>
+    <string name="retail_tutorial_no_3">3. The cashier will ask what is your booking code. Here is your booking code</string>
+    <string name="retail_tutorial_no_4">4. You’re gonna be charged as much as the total payment. (as you can see in this header).</string>
+    <string name="retail_tutorial_no_5">5. Keep the receipt, in case you’re having problem with payment verification.</string>
+    <string name="alfamart_payment_code">Alfamart payment code</string>
+    <string name="back_to_detail">Back to detail</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
